# ddd

./: .env.docker  .env.example  .flake8  .gitignore  API_DOCUMENTATION.md  AUTOMATION_COMPLETE.md  AUTOMATION_README.md  AUTOMATION_STATUS.md  AUTONOMOUS_DISCOVERY.md  AUTONOMOUS_INTEGRATION_GAP_ANALYSIS.md  CHANGELOG.md  COMPLETE_INSTALL_GUIDE.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_GAP_ANALYSIS.md  COMPREHENSIVE_IMPROVEMENTS.md  COMPREHENSIVE_REVIEW_COMPLETE.md  DEPLOYMENT_REVIEW_COMPLETE.md  DISCOVERY_FREQUENCY_REVIEW.md  DISCOVERY_SYSTEM_FAQ.md  Dockerfile  ENHANCED_DISCOVERY_MODES.md  EXECUTIVE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  GETTING_STARTED.md  HONEST_VALIDATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_INDEX.md  IMPROVEMENTS_SUMMARY.md  INSTALL.md  NETWORK_ERROR_FIXES.md  NEXT_LEVEL_IMPROVEMENTS.md  OUTSTANDING_RECOMMENDATIONS_STATUS.md  PAK_INTEGRATION_PROPOSAL.md  PRODUCTION_READINESS_CHECK.md  PROJECT_INDEX.md  Procfile  QUICKSTART.md  QUICK_REFERENCE_ENHANCED_PAPERS.md  README.md  README_IMPROVEMENTS.md  (+61 more)
agi-proto-system/: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  jest.config.js  package.json  setup.bat  setup.sh  tsconfig.json
autonomous_discoveries/: index.json
docs/: API_INTEGRATION.md  ARCHITECTURE.md  DEVELOPMENT.md  QUICK_REFERENCE.md  TESTING.md
models/: __init__.py  exceptions.py
templates/: admin.html  discoveries.html  index.html
test_results/: all_discoveries.json  discovery_validation_results.json  fine_sweep_0_90.json  honest_validation_results.json  ultimate_test_report.json
(+50 files in other folders)
